@@ -1,3 +1,3 @@
 DIST sp-auth.tgz 340562 RMD160 8cb986e50a27b1d77c0156e7b8a287de7ce4cd21 SHA1 948e2b1d1e8c05d679ee45830812d2a5bde5d5d8 SHA256 68595a011e7c359bc36106e4f4ea390087975677ccdae6e87e5280b292b4f930
-EBUILD sopcast-bin-3.0.1.ebuild 1064 RMD160 9f756db9bb227f4319712833fa7500295cf61dab SHA1 af3203fc4f7f1d220cbf8bb43d751cbc7c4dc202 SHA256 10ac460eff68949cfcfcc070d9e14cd57e8ec4b49ffaebc3431a2d0c58ea84bd
-MISC ChangeLog 241 RMD160 fa306cca34bdb8bb51b0db6f3e955dd34d888d52 SHA1 610d4dbb543807c66cd2ca1e2431ae0de29e3c20 SHA256 a604d2493a2b04003ec6b476166fe608d869baa7debef81293e993ba807e178b
+EBUILD sopcast-bin-3.0.1.ebuild 1107 RMD160 c057780df6d97d8f9fbd2b2c160a9783c3c6a590 SHA1 f216a96bbf1b9d912aa9d0492b4194fe57b50f5c SHA256 6ff5710c0e2ffcc86049d4300db488d9fec6a602702fcd008211a7f495655853
+MISC ChangeLog 340 RMD160 bec09fcc92a5b0f3f278682997a23ee8c91f4a14 SHA1 985932badb6061c04e39782331e95a5d2454b8f5 SHA256 032b3bdb7a9259585af0e8066f3c380eae8ecad77366eec7b615ef2ba022c688
