@@ -1,6 +1,9 @@
 # ChangeLog for net-p2p/sopcast-bin
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> sopcast-bin-3.0.1.ebuild:
+  Added missing || die.
 
   05 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> -sopcast-bin-1.1.1.ebuild,
   +sopcast-bin-3.0.1.ebuild:
